--- a/public/homeMockup.html
+++ b/public/homeMockup.html
@@ -8,7 +8,7 @@
   <!--Import materialize.css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="crossorigin="anonymous"></script>
-  <link type="text/css" rel="stylesheet" href="./style.css" />
+  <link type="text/css" rel="stylesheet" href="./assets/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
@@ -52,7 +52,7 @@
                   <option value="LA">LA</option>
                   <option value="ME">ME</option>
                   <option value="MD">MD</option>
-                  <option value="MA">MA</option>
+                   <option value="MA">MA</option>
                   <option value="MI">MI</option>
                   <option value="MN">MN</option>
                   <option value="MS">MS</option>
