--- a/public/homeMockup.html
+++ b/public/homeMockup.html
@@ -229,8 +229,21 @@
     <div class="parallax"><img src="./assets/images/weatherBack2.jpg"></div>
     <h2 class='whiteText section scrollspy' id='toothTimer'>Teeth Brushing Button!</h2>
     <a id="toothTimerButton" type="button" class="pulse btn btn-large hoverable white-text">Start Timer</a>
-  </div>
+  
+    <button id="stop">Stop</button>
+    <button id="resume">Resume</button>
+    
+    <script>
+  var number =120000
+  
+  
+  $("#toothtimerButton").on("click",function(){
+    console.log("start timer boi")
+}
 
+  
+    </div>
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script type="text/javascript" src="./app.js"></script>
 </body>
