cahnges made for weather

--- a/public/homeMockup.html
+++ b/public/homeMockup.html
@@ -217,6 +217,32 @@
   <div class="parallax-container center-align">
     <div class="parallax"><img src="./assets/images/weatherBack2.jpg"></div>
     <h2 class='whiteText section scrollspy' id='weather'>Weather Baby</h2>
+
+    <button onclick="getLocation()">Try It</button>
+
+    <!-- weather current location tracker -->
+
+    <p id="demo"></p>
+
+    <script>
+    var x = document.getElementById("demo");
+
+    function getLocation() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+      } else { 
+        x.innerHTML = "Geolocation is not supported by this browser.";
+      }
+    }
+
+    function showPosition(position) {
+      x.innerHTML = "Latitude: " + position.coords.latitude + 
+      "<br>Longitude: " + position.coords.longitude;
+    }
+    </script>
+
+    <!-- Location tracker code ends here. -->
+
   </div>
 
   <div class='row section scrollspy' id='news'>
@@ -228,7 +254,11 @@
   <div class="parallax-container center-align">
     <div class="parallax"><img src="./assets/images/weatherBack2.jpg"></div>
     <h2 class='whiteText section scrollspy' id='toothTimer'>Teeth Brushing Button!</h2>
-    <a id="toothTimerButton" type="button" class="pulse btn btn-large hoverable white-text">Start Timer</a>
+    
+    <a id="toothTimerButton" type="button" class="pulse btn btn-large hoverable white-text"><div id="timer">Start Timer</div></a>
+    <div id="watch">
+      
+    </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
