--- a/public/homeMockup.html
+++ b/public/homeMockup.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Abel|Staatliches" rel="stylesheet">
   <!--Import materialize.css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href=" https://fonts.googleapis.com/css?family=Spicy+Rice"rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="crossorigin="anonymous"></script>
   <link type="text/css" rel="stylesheet" href="./assets/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -229,21 +230,9 @@
     <div class="parallax"><img src="./assets/images/weatherBack2.jpg"></div>
     <h2 class='whiteText section scrollspy' id='toothTimer'>Teeth Brushing Button!</h2>
     <a id="toothTimerButton" type="button" class="pulse btn btn-large hoverable white-text">Start Timer</a>
-  
-    <button id="stop">Stop</button>
-    <button id="resume">Resume</button>
-    
-    <script>
-  var number =120000
-  
-  
-  $("#toothtimerButton").on("click",function(){
-    console.log("start timer boi")
-}
-
-  
     </div>
-  </script>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script type="text/javascript" src="./app.js"></script>
 </body>
+</html>
