weather thing done.

--- a/public/homeMockup.html
+++ b/public/homeMockup.html
@@ -218,7 +218,7 @@
     <div class="parallax"><img src="./assets/images/weatherBack2.jpg"></div>
     <h2 class='whiteText section scrollspy' id='weather'>Weather Baby</h2>
 
-    <button onclick="getLocation()">Try It</button>
+    <button class="submit" onclick="getLocation()">Try It</button>
 
     <!-- weather current location tracker -->
 
@@ -230,7 +230,7 @@
 
   <div class='row section scrollspy' id='news'>
       <div class='container col s12 center-align section'>
-        <h2>News for the day goes here</h2>
+        <p>News for the day goes here</p>
       </div>
   </div>
 
